--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,5 +2,28 @@
 @import "_variables";
 
 body {
+  font-family: sans-serif;
   background-color: $red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  color: white;
+  font-size: 20px;
+}
+
+img {
+  width: 100px;
+}
+
+footer {
+  display: none;
+}
+
+h1 {
+  margin: 20px 0;
+  color: white;
+  font-size: 40px;
+  font-weight: 300;
 }
